# IDIoT

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  LICENSE  Make.toml  README.md  deny.toml
adafruit-dht11-sys/: Cargo.toml  build.rs  wrapper.h
dht11-test/: Cargo.toml
dht11-test/src/: main.rs
diot-core/: Cargo.toml
diot-core/src/: device.rs  lib.rs
diot-core/src/device/: buzzer.rs  dht11.rs  logger.rs  timer.rs
diotd/: Cargo.toml  build.rs
diotd/src/: control.rs  hardware.rs  main.rs  store.rs  swarm.rs  system.rs  web.rs
diotd/www/: package-lock.json  package.json  vue.config.js
diotd/www/src/: App.vue
diotd/www/src/components/: Node.vue  NodeDevice.vue  NodeDeviceSensor.vue
docs/: ARCHITECTURE.md
scripts/: Dockerfile.rpi0  Dockerfile.rpi34
