[package]
name = "dht11-test"
version = "0.1.0"
authors = ["nnub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }
rppal = { version = "0.11.3", features = ["hal", "hal-unproven"] }
dht11 = "0.3.1"
hal_sensor_dht = { version = "0.1.0", features = ["floats"] }
libc = "0.2"
adafruit-dht11-sys = { path = "../adafruit-dht11-sys" }