[package]
name = "dht11-test"
version = "0.1.0"
authors = ["nnub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-dht11-sys = { path = "../adafruit-dht11-sys", optional = true }

[target.armv7-unknown-linux-gnueabihf.dependencies]
rppal = "0.11.3"

[target.arm-unknown-linux-gnueabi.dependencies]
rppal = "0.11.3"