[package]
name = "diot-core"
version = "0.1.0"
authors = ["Ignacio <nnubes256@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-kinds = "0.5.0"
zerocopy = "0.3"
anyhow = "1"
thiserror = "1"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
rppal = "0.11.3"
adafruit-dht11-sys = { path = "../adafruit-dht11-sys" }