[package]
name = "diotd"
version = "0.1.0"
authors = ["Ignacio <nnubes256@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio-compat-02 = "0.2"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.libp2p]
version = "0.35"
default-features = false
features = [
    "deflate",
    "dns",
    "floodsub",
    "identify",
    "kad",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "plaintext",
    "pnet",
    "request-response",
    "secp256k1",
    "tcp-tokio",
    "uds",
    "yamux"
]