[package]
name = "diotd"
version = "0.1.0"
authors = ["Ignacio <nnubes256@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-bincode = "0.6"
async-trait = "0.1"
async-compat = "0.2"
bs58 = "0.4"
base64 = "0.13"
base64-serde = "0.6"
dashmap = { version = "4", features = ["serde"] }
diot-core = { path = "../diot-core" }
anyhow = "1.0"
tokio-compat-02 = "0.2"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
bincode = "1"
serde_json = "1"
sled = "0.34"
zerocopy = "0.3"
byteorder = "1"
lazy_static = "1"
rand = "0.8"
pin-project = "1"
tokio-stream = { version = "0.1.5", features = ["sync"] }
warp = "0.3"

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.libp2p]
version = "0.35"
default-features = false
features = [
    "deflate",
    "dns",
    "gossipsub",
    "floodsub",
    "identify",
    "kad",
    "mplex",
    "noise",
    "ping",
    "plaintext",
    "pnet",
    "secp256k1",
    "tcp-tokio",
    "uds",
    "yamux"
]

[dependencies.libp2p-mdns]
path = "../vendor/libp2p-mdns"

[dependencies.libp2p-request-response]
path = "../vendor/libp2p-request-response"